# append-only-benchmark

./: Cargo.toml  README.md
benches/: benchmark.rs
