[package]
name = "append-only-benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
append-only-vec = "0.1.4"
appendbuf = "0.1.6"
appendlist = "1.4.0"
chunky-vec = "0.1.0"
concurrent-list = "0.0.2"
elsa = "1.10.0"
esl01-indexedlog = "0.3.0"
segvec = "0.2.0"
smallvec = "1.13.2"
syncbuf = "0.2.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false
path = "benches/benchmark.rs"
